tests/baselines/reference/emitArrowFunctionThisCapturingES6.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionThisCapturingES6.ts(6,10): error TS2540: Cannot assign to 'name' because it is a read-only property.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionThisCapturingES6.ts (1 errors) ====
    var f1 = () => {
        this.age = 10
    };
    
    var f2 = (x: string) => {
        this.name = x
             ~~~~
!!! error TS2540: Cannot assign to 'name' because it is a read-only property.
    }
    
    function foo(func: () => boolean){ }
    foo(() => {
        this.age = 100;
        return true;
    });
    